welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: type mismatch;
 found   : Unit
 required: Int
s=s+1 }
 ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
s=s+1 }
 ^countTeen:8: error: type mismatch;
 found   : Unit
 required: Int
s=s+1 }
 ^countTeen:10: error: type mismatch;
 found   : Unit
 required: Int
s=s+1 }
 ^countTeen:11: error: type mismatch;
 found   : Unit
 required: Int
else {s=s+0}
       ^