welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
var s=0 
if (hasTeen(a)==true ) {
s=s+1 }
else if (hasTeen(b)==true) {
s=s+1 }
else if (hasTeen(c)==true ) {
s=s+1 }
else if (hasTeen(d)==true) {
s=s+1 }
else {s=s+0}
}






def hasTeen(a:Int): Boolean = {
	var f:Boolean=false
	if (a<20 && a >12){
		f=true

}else {f=false}
return f 
}
